[project]
name = "signals_project"
version = "0.1.0"
description = "A small project to generate and manipulate sine and step signals"
authors = [
  { name="Tudor-Alexandru Minaev", email="minaevtudoralexandru@gmail.com", student_number="6314988" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
where = ["."]